# deezer-dl

./: .gitignore  README.md  pyproject.toml  requierments.txt  requirements.txt  setup.py  todo.txt
deezerdl/: main.py
deezerdl/deezer/: configuration.py  deezer.py  download.py
src/: main.py
src/deezer/: api.py  client.py  config.py  crypto.py  downloader.py  songutils.py  utils.py
